# camo

./: Cargo.toml  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: quality-control.yml  release.yml
src/: lib.rs  main.rs
src/cli/: commands.rs
src/models/: theme.rs
src/services/: theme_service.rs
src/services/themers/: hypr.rs  mod.rs  noctalia.rs
src/tui/: mod.rs  terminal_user_interface.rs
src/utils/: paths.rs
