[package]
name = "camo"
description = "Terminal-based theme picker"
license = "MIT"
repository = "https://github.com/FrederikNorlyk/camo"
keywords = ["theme", "tui"]
categories = ["config"]
version = "1.9.0"
edition = "2024"

[lints.clippy]
all = "deny"           # Fail the build instead of warn
pedantic = "deny"      # Pedantic lints also fail
correctness = "deny"   # Correctness issues
complexity = "deny"    # Overly complex code
perf = "deny"          # Performance anti-patterns
style = "deny"         # Style issues
suspicious = "deny"    # Suspicious patterns

[lints.rust]
unsafe_code = "deny"
unused = "deny"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
regex = "1.12.3"
rand = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
easy_color = "0.1.13"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
